--- a/Resources/CoreBase.resx
+++ b/Resources/CoreBase.resx
@@ -119,39 +119,39 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="DynamoCSharpSample.Common.Document.Current.Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.common.document.current.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.common.document.current.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Common.Document.Current.Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.common.document.current.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.common.document.current.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Common.File.FromPath.Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.common.file.frompath.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.common.file.frompath.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Common.File.FromPath.Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.common.file.frompath.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.common.file.frompath.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Elements.FamilyInstance.FaceFlipped.Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.elements.familyinstance.faceflipped.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.elements.familyinstance.faceflipped.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Elements.FamilyInstance.FaceFlipped.Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.elements.familyinstance.faceflipped.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.elements.familyinstance.faceflipped.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Elements.FamilyInstance.HandFlipped.Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.elements.familyinstance.handflipped.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.elements.familyinstance.handflipped.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Elements.FamilyInstance.HandFlipped.Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.elements.familyinstance.handflipped.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.elements.familyinstance.handflipped.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Elements.FamilyInstance.IsFaceFlipped.Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.elements.familyinstance.isfaceflipped.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.elements.familyinstance.isfaceflipped.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Elements.FamilyInstance.IsFaceFlipped.Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.elements.familyinstance.isfaceflipped.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.elements.familyinstance.isfaceflipped.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Elements.FamilyInstance.IsHandFlipped.Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.elements.familyinstance.ishandflipped.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.elements.familyinstance.ishandflipped.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Elements.FamilyInstance.IsHandFlipped.Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.elements.familyinstance.ishandflipped.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.elements.familyinstance.ishandflipped.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
