--- a/Resources/CoreExtensible.resx
+++ b/Resources/CoreExtensible.resx
@@ -119,15 +119,15 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="DynamoCSharpSample.Common.Printer.Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.common.printer.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.common.printer.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Common.Printer.Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.common.printer.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.common.printer.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Common.ZoomType.Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.common.zoomtype.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.common.zoomtype.large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DynamoCSharpSample.Common.ZoomType.Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\dynamocsharpsample.common.zoomtype.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Images\dynamocsharpsample.common.zoomtype.small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
